otp valid and invalid working